<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v7.widget.Toolbar
		android:background="@color/primary"
		android:id="@+id/moviedetailToolbar"
		android:layout_width="match_parent"
		android:layout_height="?actionBarSize"
		android:layout_marginBottom="240dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.6"
		app:layout_constraintStart_toStartOf="parent"/>

	<de.hdodenhof.circleimageview.CircleImageView
		android:id="@+id/moviedetailCVPoster"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:padding="10dp"
		android:scaleType="centerCrop"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/moviedetailToolbar"/>

	<TextView
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:id="@+id/moviedetailTVTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="Title"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/primary"
		android:textStyle="bold"
		android:typeface="serif"
		app:layout_constraintTop_toBottomOf="@+id/moviedetailCVPoster"
		tools:layout_editor_absoluteX="171dp"/>

	<TextView
		android:id="@+id/moviedetailTVRelease"
		android:layout_width="wrap_content"
		android:layout_height="20dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="Release"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textStyle="bold"
		android:typeface="serif"
		app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/moviedetailTVTitle"/>

	<RelativeLayout
		android:id="@+id/relativeLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/overview"
		android:padding="10dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		tools:layout_editor_absoluteY="289dp"
		app:layout_constraintTop_toBottomOf="@+id/moviedetailTVRelease">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:gravity="center"
			android:orientation="vertical">

			<TextView
				android:id="@+id/moviedetailTVRating"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Rating"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/accent"
				android:textStyle="bold"
				android:typeface="serif"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/rating"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:typeface="serif"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:gravity="center"
			android:orientation="vertical">

			<TextView
				android:id="@+id/moviedetailTVPopularity"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Popularity"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/accent"
				android:textStyle="bold"
				android:typeface="serif"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/popularity"
				android:typeface="serif"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:gravity="center"
			android:orientation="vertical">

			<TextView
				android:id="@+id/moviedetailTVLanguage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Language"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/accent"
				android:textStyle="bold"
				android:typeface="serif"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/language"
				android:typeface="serif"/>

		</LinearLayout>

	</RelativeLayout>

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/genre_b"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/accent"
		android:textStyle="bold"
		app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
		tools:layout_editor_absoluteX="0dp"/>

	<HorizontalScrollView
		android:id="@+id/horizontalScrollView"
		android:layout_width="match_parent"
		android:layout_height="45dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView">

		<LinearLayout
			android:id="@+id/moviedetailLLGenres"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

		</LinearLayout>

	</HorizontalScrollView>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="22dp"
		android:layout_gravity="center"
		android:text="@string/overview"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/accent"
		android:textStyle="bold"
		android:typeface="serif"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.501"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"/>

	<TextView
		android:id="@+id/moviedetailTVOverview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:padding="10dp"
		android:typeface="serif"
		app:layout_constraintTop_toBottomOf="@+id/textView2"
		tools:layout_editor_absoluteX="0dp"
		android:background="@drawable/overview"/>

</android.support.constraint.ConstraintLayout>